[package]
name = "vk_llw"
version = "0.1.0"
authors = ["KirFed <f3lkilo@yandex.ru>"]
edition = "2018"
description = "Low level wrappers for Vulkan API objects that makes creation and destroying safe"
license = "MIT"
repository = "https://github.com/F3kilo/vk_llw.git"

[dependencies]
ash = "0.31.0"
log = "0.4.11"

[dev-dependencies]
env_logger = "0.8.2"